// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StatDetailModal Component - Snapshots renders StatDetailModal in loading state 1`] = `
<Modal
  animationType="slide"
>
  <View
    style={
      {
        "backgroundColor": "#FFFFFF",
        "flex": 1,
        "paddingBottom": 0,
        "paddingLeft": 0,
        "paddingRight": 0,
        "paddingTop": 0,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "borderBottomColor": "#f0f0f0",
          "borderBottomWidth": 1,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingHorizontal": 16,
          "paddingVertical": 12,
        }
      }
    >
      <text
        style={
          [
            {
              "flex": 1,
              "fontSize": 18,
              "fontWeight": "600",
            },
            {
              "color": "#000",
            },
          ]
        }
      >
        My Surveys
      </text>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        hitSlop={16}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "padding": 8,
          }
        }
      >
        <Text
          allowFontScaling={false}
          selectable={false}
          style={
            [
              {
                "color": "#000",
                "fontSize": 24,
              },
              undefined,
              {
                "fontFamily": "material-community",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              {},
            ]
          }
        >
          󰅖
        </Text>
      </View>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
          "paddingHorizontal": 16,
        }
      }
    >
      <text
        style={
          [
            {
              "fontSize": 14,
              "textAlign": "center",
            },
            {
              "color": undefined,
            },
          ]
        }
      >
        No items found
      </text>
    </View>
  </View>
</Modal>
`;

exports[`StatDetailModal Component - Snapshots renders StatDetailModal with empty items list 1`] = `
<Modal
  animationType="slide"
>
  <View
    style={
      {
        "backgroundColor": "#FFFFFF",
        "flex": 1,
        "paddingBottom": 0,
        "paddingLeft": 0,
        "paddingRight": 0,
        "paddingTop": 0,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "borderBottomColor": "#f0f0f0",
          "borderBottomWidth": 1,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingHorizontal": 16,
          "paddingVertical": 12,
        }
      }
    >
      <text
        style={
          [
            {
              "flex": 1,
              "fontSize": 18,
              "fontWeight": "600",
            },
            {
              "color": "#000",
            },
          ]
        }
      >
        My Surveys
      </text>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        hitSlop={16}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "padding": 8,
          }
        }
      >
        <Text
          allowFontScaling={false}
          selectable={false}
          style={
            [
              {
                "color": "#000",
                "fontSize": 24,
              },
              undefined,
              {
                "fontFamily": "material-community",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              {},
            ]
          }
        >
          󰅖
        </Text>
      </View>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
          "paddingHorizontal": 16,
        }
      }
    >
      <text
        style={
          [
            {
              "fontSize": 14,
              "textAlign": "center",
            },
            {
              "color": undefined,
            },
          ]
        }
      >
        No items found
      </text>
    </View>
  </View>
</Modal>
`;

exports[`StatDetailModal Component - Snapshots renders StatDetailModal with environmental health items 1`] = `
<Modal
  animationType="slide"
>
  <View
    style={
      {
        "backgroundColor": "#FFFFFF",
        "flex": 1,
        "paddingBottom": 0,
        "paddingLeft": 0,
        "paddingRight": 0,
        "paddingTop": 0,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "borderBottomColor": "#f0f0f0",
          "borderBottomWidth": 1,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingHorizontal": 16,
          "paddingVertical": 12,
        }
      }
    >
      <text
        style={
          [
            {
              "flex": 1,
              "fontSize": 18,
              "fontWeight": "600",
            },
            {
              "color": "#000",
            },
          ]
        }
      >
        Recent Activity
      </text>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        hitSlop={16}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "padding": 8,
          }
        }
      >
        <Text
          allowFontScaling={false}
          selectable={false}
          style={
            [
              {
                "color": "#000",
                "fontSize": 24,
              },
              undefined,
              {
                "fontFamily": "material-community",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              {},
            ]
          }
        >
          󰅖
        </Text>
      </View>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
          "paddingHorizontal": 16,
        }
      }
    >
      <text
        style={
          [
            {
              "fontSize": 14,
              "textAlign": "center",
            },
            {
              "color": undefined,
            },
          ]
        }
      >
        No items found
      </text>
    </View>
  </View>
</Modal>
`;

exports[`StatDetailModal Component - Snapshots renders StatDetailModal with hasMore=false hides Load More button 1`] = `
<Modal
  animationType="slide"
>
  <View
    style={
      {
        "backgroundColor": "#FFFFFF",
        "flex": 1,
        "paddingBottom": 0,
        "paddingLeft": 0,
        "paddingRight": 0,
        "paddingTop": 0,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "borderBottomColor": "#f0f0f0",
          "borderBottomWidth": 1,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingHorizontal": 16,
          "paddingVertical": 12,
        }
      }
    >
      <text
        style={
          [
            {
              "flex": 1,
              "fontSize": 18,
              "fontWeight": "600",
            },
            {
              "color": "#000",
            },
          ]
        }
      >
        Organization Vitals
      </text>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        hitSlop={16}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "padding": 8,
          }
        }
      >
        <Text
          allowFontScaling={false}
          selectable={false}
          style={
            [
              {
                "color": "#000",
                "fontSize": 24,
              },
              undefined,
              {
                "fontFamily": "material-community",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              {},
            ]
          }
        >
          󰅖
        </Text>
      </View>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
          "paddingHorizontal": 16,
        }
      }
    >
      <text
        style={
          [
            {
              "fontSize": 14,
              "textAlign": "center",
            },
            {
              "color": undefined,
            },
          ]
        }
      >
        No items found
      </text>
    </View>
  </View>
</Modal>
`;

exports[`StatDetailModal Component - Snapshots renders StatDetailModal with hasMore=true shows Load More button 1`] = `
<Modal
  animationType="slide"
>
  <View
    style={
      {
        "backgroundColor": "#FFFFFF",
        "flex": 1,
        "paddingBottom": 0,
        "paddingLeft": 0,
        "paddingRight": 0,
        "paddingTop": 0,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "borderBottomColor": "#f0f0f0",
          "borderBottomWidth": 1,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingHorizontal": 16,
          "paddingVertical": 12,
        }
      }
    >
      <text
        style={
          [
            {
              "flex": 1,
              "fontSize": 18,
              "fontWeight": "600",
            },
            {
              "color": "#000",
            },
          ]
        }
      >
        Organization Vitals
      </text>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        hitSlop={16}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "padding": 8,
          }
        }
      >
        <Text
          allowFontScaling={false}
          selectable={false}
          style={
            [
              {
                "color": "#000",
                "fontSize": 24,
              },
              undefined,
              {
                "fontFamily": "material-community",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              {},
            ]
          }
        >
          󰅖
        </Text>
      </View>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
          "paddingHorizontal": 16,
        }
      }
    >
      <text
        style={
          [
            {
              "fontSize": 14,
              "textAlign": "center",
            },
            {
              "color": undefined,
            },
          ]
        }
      >
        No items found
      </text>
    </View>
  </View>
</Modal>
`;

exports[`StatDetailModal Component - Snapshots renders StatDetailModal with long item labels 1`] = `
<Modal
  animationType="slide"
>
  <View
    style={
      {
        "backgroundColor": "#FFFFFF",
        "flex": 1,
        "paddingBottom": 0,
        "paddingLeft": 0,
        "paddingRight": 0,
        "paddingTop": 0,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "borderBottomColor": "#f0f0f0",
          "borderBottomWidth": 1,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingHorizontal": 16,
          "paddingVertical": 12,
        }
      }
    >
      <text
        style={
          [
            {
              "flex": 1,
              "fontSize": 18,
              "fontWeight": "600",
            },
            {
              "color": "#000",
            },
          ]
        }
      >
        My Surveys
      </text>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        hitSlop={16}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "padding": 8,
          }
        }
      >
        <Text
          allowFontScaling={false}
          selectable={false}
          style={
            [
              {
                "color": "#000",
                "fontSize": 24,
              },
              undefined,
              {
                "fontFamily": "material-community",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              {},
            ]
          }
        >
          󰅖
        </Text>
      </View>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
          "paddingHorizontal": 16,
        }
      }
    >
      <text
        style={
          [
            {
              "fontSize": 14,
              "textAlign": "center",
            },
            {
              "color": undefined,
            },
          ]
        }
      >
        No items found
      </text>
    </View>
  </View>
</Modal>
`;

exports[`StatDetailModal Component - Snapshots renders StatDetailModal with many items 1`] = `
<Modal
  animationType="slide"
>
  <View
    style={
      {
        "backgroundColor": "#FFFFFF",
        "flex": 1,
        "paddingBottom": 0,
        "paddingLeft": 0,
        "paddingRight": 0,
        "paddingTop": 0,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "borderBottomColor": "#f0f0f0",
          "borderBottomWidth": 1,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingHorizontal": 16,
          "paddingVertical": 12,
        }
      }
    >
      <text
        style={
          [
            {
              "flex": 1,
              "fontSize": 18,
              "fontWeight": "600",
            },
            {
              "color": "#000",
            },
          ]
        }
      >
        My Surveys
      </text>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        hitSlop={16}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "padding": 8,
          }
        }
      >
        <Text
          allowFontScaling={false}
          selectable={false}
          style={
            [
              {
                "color": "#000",
                "fontSize": 24,
              },
              undefined,
              {
                "fontFamily": "material-community",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              {},
            ]
          }
        >
          󰅖
        </Text>
      </View>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
          "paddingHorizontal": 16,
        }
      }
    >
      <text
        style={
          [
            {
              "fontSize": 14,
              "textAlign": "center",
            },
            {
              "color": undefined,
            },
          ]
        }
      >
        No items found
      </text>
    </View>
  </View>
</Modal>
`;

exports[`StatDetailModal Component - Snapshots renders StatDetailModal with medical evaluation items 1`] = `
<Modal
  animationType="slide"
>
  <View
    style={
      {
        "backgroundColor": "#FFFFFF",
        "flex": 1,
        "paddingBottom": 0,
        "paddingLeft": 0,
        "paddingRight": 0,
        "paddingTop": 0,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "borderBottomColor": "#f0f0f0",
          "borderBottomWidth": 1,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingHorizontal": 16,
          "paddingVertical": 12,
        }
      }
    >
      <text
        style={
          [
            {
              "flex": 1,
              "fontSize": 18,
              "fontWeight": "600",
            },
            {
              "color": "#000",
            },
          ]
        }
      >
        Recent Activity
      </text>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        hitSlop={16}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "padding": 8,
          }
        }
      >
        <Text
          allowFontScaling={false}
          selectable={false}
          style={
            [
              {
                "color": "#000",
                "fontSize": 24,
              },
              undefined,
              {
                "fontFamily": "material-community",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              {},
            ]
          }
        >
          󰅖
        </Text>
      </View>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
          "paddingHorizontal": 16,
        }
      }
    >
      <text
        style={
          [
            {
              "fontSize": 14,
              "textAlign": "center",
            },
            {
              "color": undefined,
            },
          ]
        }
      >
        No items found
      </text>
    </View>
  </View>
</Modal>
`;

exports[`StatDetailModal Component - Snapshots renders StatDetailModal with multiple item types 1`] = `
<Modal
  animationType="slide"
>
  <View
    style={
      {
        "backgroundColor": "#FFFFFF",
        "flex": 1,
        "paddingBottom": 0,
        "paddingLeft": 0,
        "paddingRight": 0,
        "paddingTop": 0,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "borderBottomColor": "#f0f0f0",
          "borderBottomWidth": 1,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingHorizontal": 16,
          "paddingVertical": 12,
        }
      }
    >
      <text
        style={
          [
            {
              "flex": 1,
              "fontSize": 18,
              "fontWeight": "600",
            },
            {
              "color": "#000",
            },
          ]
        }
      >
        Recent Activity
      </text>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        hitSlop={16}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "padding": 8,
          }
        }
      >
        <Text
          allowFontScaling={false}
          selectable={false}
          style={
            [
              {
                "color": "#000",
                "fontSize": 24,
              },
              undefined,
              {
                "fontFamily": "material-community",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              {},
            ]
          }
        >
          󰅖
        </Text>
      </View>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
          "paddingHorizontal": 16,
        }
      }
    >
      <text
        style={
          [
            {
              "fontSize": 14,
              "textAlign": "center",
            },
            {
              "color": undefined,
            },
          ]
        }
      >
        No items found
      </text>
    </View>
  </View>
</Modal>
`;

exports[`StatDetailModal Component - Snapshots renders StatDetailModal with survey items 1`] = `
<Modal
  animationType="slide"
>
  <View
    style={
      {
        "backgroundColor": "#FFFFFF",
        "flex": 1,
        "paddingBottom": 0,
        "paddingLeft": 0,
        "paddingRight": 0,
        "paddingTop": 0,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "borderBottomColor": "#f0f0f0",
          "borderBottomWidth": 1,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingHorizontal": 16,
          "paddingVertical": 12,
        }
      }
    >
      <text
        style={
          [
            {
              "flex": 1,
              "fontSize": 18,
              "fontWeight": "600",
            },
            {
              "color": "#000",
            },
          ]
        }
      >
        My Surveys
      </text>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        hitSlop={16}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "padding": 8,
          }
        }
      >
        <Text />
      </View>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
          "paddingHorizontal": 16,
        }
      }
    >
      <text
        style={
          [
            {
              "fontSize": 14,
              "textAlign": "center",
            },
            {
              "color": undefined,
            },
          ]
        }
      >
        No items found
      </text>
    </View>
  </View>
</Modal>
`;
